# pydruglogics

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pydruglogics_tutorial.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml  (+3 more)
ags_cascade_1.0/: network.bnet
benchmark/: Benchmark.py
conda/: meta.yaml
docs/: CNAME  api.html  conf.py  genindex.html  getting_started.html  getting_started.rst  index.html  index.rst  inputs.html  inputs.rst  modules.html  modules.rst  objects.inv  py-modindex.html  pydruglogics.execution.Executor.html  pydruglogics.execution.Executor.rst  pydruglogics.execution.html  pydruglogics.html  pydruglogics.input.ModelOutputs.html  pydruglogics.input.ModelOutputs.rst  pydruglogics.input.Perturbations.html  pydruglogics.input.Perturbations.rst  pydruglogics.input.TrainingData.html  pydruglogics.input.TrainingData.rst  pydruglogics.input.html  pydruglogics.model.BooleanModel.html  pydruglogics.model.BooleanModel.rst  pydruglogics.model.BooleanModelOptimizer.html  pydruglogics.model.BooleanModelOptimizer.rst  pydruglogics.model.Evolution.html  pydruglogics.model.Evolution.rst  pydruglogics.model.InteractionModel.html  pydruglogics.model.InteractionModel.rst  pydruglogics.model.ModelPredictions.html  pydruglogics.model.ModelPredictions.rst  pydruglogics.model.Statistics.html  pydruglogics.model.Statistics.rst  pydruglogics.model.html  pydruglogics.utils.BNetworkUtil.html  pydruglogics.utils.BNetworkUtil.rst  (+12 more)
gitsbe/: __init__.py
joss/: paper.md
paper/: paper.bib  paper.md
pydruglogics/: __init__.py
(+296 files in other folders)
